syntax = "proto3";

option go_package = "micro/learn2/test6_summary/proto/sum";

package sum;

service Computer {
    rpc Add(AddPRCRequest) returns(AddRPCResponse){}
    rpc Append(AppendRPCRequest) returns (AppendRPCResponse){}
}

message AddPRCRequest {
    int64 num1 = 1;
    int64 num2 = 2;
}

message AddRPCResponse {
    int64 ret = 1;
    string err = 2;
}

message AppendRPCRequest {
    string str1 = 1;
    string str2 = 2;
}

message AppendRPCResponse {
    string ret = 1;
    string err = 2;
}

// 连在一起的:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative learn2/test6_summary/proto/add/add.proto 